Reworked game data storage

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(datMorpion)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(${PROJECT_NAME} main.cpp MyWindow.cpp MyWindow.h)
+add_executable(${PROJECT_NAME} src/main.cpp src/windowManaging/MyWindow.cpp src/windowManaging/MyWindow.hpp src/windowManaging/GameBoard.cpp src/windowManaging/GameBoard.hpp src/windowManaging/PlayerEnum.hpp src/windowManaging/Cell.cpp src/windowManaging/Cell.hpp)
 target_link_libraries(${PROJECT_NAME} sfml-window sfml-graphics sfml-system)
